--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header__section">
             <div class="logo">
-                <h1><span>Due</span>Board</h1>
+                <h1><span class="due">Due</span><span class="board">Board</span></h1>
             </div>
         </div>
     </header>
