proper error handling for UX

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <i class="ri-calendar-schedule-line"></i> Due Date
                     </button>
                     <button class="btn btn-outlined" id="sort-title">
-                        <i class="ri-sort-alphabet-asc"></i> By Title
+                        <i class="ri-sort-alphabet-asc"></i> Alphabetically
                     </button>
                     <button class="btn btn-outlined" id="show-urgent">
                         <i class="ri-alert-fill search__icon"></i> Urgent Only
