Added a div for error display (missing canvasCalnedar)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <!-- Assignments will be inserted here dynamically -->
             </div>
 
+            <div id="error-content"></div>
+
             <!-- Authorization & signout buttons -->
             <div id="auth-container">
                 <button id="authorize_button">Authorize Access</button>
