Ft: added links to demo, issue report & tech. collaboration

--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
             <div class="logo">
                 <h1><span class="due">Due</span><span class="board">Board</span></h1>
             </div>
+
+            <!-- App details: video demo, gh repo & report issues -->
+            <div class="app__detail">
+                <div class="detail__demo">
+                    <a data-tooltip="Video Demo" href="https://youtu.be/M2U6hr7TV3w" target="_blank">
+                        <i class="ri-video-line ri__icon"></i>
+                    </a>
+                </div>
+
+                <div class="detail__report">
+                    <a data-tooltip="Report an issue" href="https://forms.gle/MgqrrgmJDTqhawgx6" target="_blank">
+                        <i class="ri-question-line ri__icon"></i>
+                    </a>
+                </div>
+
+                <div class="detail__github">
+                    <a data-tooltip="Technical Contribution" href="https://github.com/Mr-Eke/DueBoard" target="_blank">
+                        <i class="ri-github-line ri__icon"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </header>
 
